--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-color:#bdc3c7;">
+<body style="background-color:#bdc3d7;">
     <h1 style="margin-top: 20%; margin-bottom: 20%; text-align: center;">Commande git et github</h1>
 </body>
 
